starting to get rid of "we"

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -985,8 +985,7 @@ Conformance of some translations is established in annex \ref{a:graph}.
 Conformance of the following subset of logical languages  shall be established: OWL2 (with profiles
 EL, RL, QL), CLIF, RDF, UML class diagrams.
 	&
-We establish conformance of OWL 2 (annex \ref{a:owl}), CLIF (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}) and UML class diagrams (annex \ref{a:uml-class}) 
-with \DOL.
+ Conformance of the following languages is established: OWL 2 (annex \ref{a:owl}), CLIF (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}).
    \\ \hline
 %
 6.5.5(c)& 
@@ -1087,7 +1086,7 @@ Moreover, there is a mechanism for injecting IRIs in existing language serializa
 Proposals should discuss whether the semantics of the metalanguage shall be included into the
 standard
 &
-We have included the \DOL metalanguage semantics in this specification. The reasons are discussed
+The semantics of the  \DOL metalanguage is included in this specification. The reasons are discussed
 in the introduction of clause \ref{c:semantics}.
    \\ \hline
 %	
@@ -1161,8 +1160,8 @@ language can be used as-is in \DOL, by reference to its IRI. See \ref{sec:existi
 %
 6.8(c)		&
 Proposals establishing actually (or making this at least possible in theory) OntoIOp conformance of more logical languages and translations will be favored. 	&
-We establish conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}) and \CASL (annex \ref{a:casl})
-with \DOL.
+The conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}) and \CASL (annex \ref{a:casl})
+ is established.
 	\\ \hline
 
 \end{longtable}
@@ -1316,7 +1315,7 @@ criteria) to a language that already is \DOL-conforming.
 mechanisms
 \item its annotation language aspect\index{language aspect ! annotation} must \cbs be compatible\cbe\ with \DOL's meta-language constructs.
 \end{itemize}
-We also define different conformance levels with respect to the usage of IRIs as identifiers for all kinds
+\cbs Several conformance levels are defined. They differ with respect \cbe{}to the usage of IRIs as identifiers for all kinds 
 of entities that the OMS language supports.
 \end{fminipage}
 
@@ -1434,9 +1433,11 @@ of assigning identifiers to entities (symbols, axioms, modules, etc.) inside fra
 languages that occur in a \DOL document, even if that OMS language doesn't support such identifiers
 by its own means. 
 Such identifiers will be visible to a \DOL tool, but not to a tool that only supports the OMS
-language.  To achieve this without breaking the formal semantics of that OMS language, we make use
-of \termref{annotation} or commenting features that the OMS language supports, in order to place such
-identifiers inside annotations/ comments.  Depending on the nature of the concrete given
+language.  To achieve this without breaking the formal semantics of that OMS language,
+ \cbs \DOL utilizes \cbe the \termref{annotation} or commenting features that the OMS language supports, 
+ in order to place such
+identifiers inside annotations/ comments.  
+Depending on the nature of the concrete given
 serialization of the OMS language, be it plain text, some serialization of RDF, XML, or some other 
 structured text format, we can be more specific about what the annotation/commenting facilities of
 that serialization must look like in order to support this identifier injection.  
