Fix some strange indentations/overly long comments
While working on the undeclared prefixes, I wrote some comments, to stay
consistent with the ones already present. Since I was already changing
these comments, I took the liberty of fixing some indentations/text
alignments which where not showing up properly in the output.
I also added some line breaks to lines which appeared to long in the
output.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3368,7 +3368,7 @@ Fig.~\ref{fig:state-machine} & stm & state machine\\\hline
 \end{tabular}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement,library,via,network,entailment,entails,refined,consistent},escapechar=@,mathescape]
-%prefix( :     <http://www.example.org/uml/>
+%prefix( :      <http://www.example.org/uml/>
          uml:   <http://www.uml.org/spec/UML/>
 %% descriptions of logics ...		 
          log:   <http://www.omg.org/spec/DOL/logics/>
@@ -8919,8 +8919,7 @@ combine NetworkElements  & Alignments, Publications \\\hline
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/prop#>
          log:   <http://www.omg.org/spec/DOL/logics/> )%     
-
-		 		%% descriptions of logics ...
+                %% descriptions of logics ...
 
 %% non-standard serialization built into Hets: 
 logic log:Propositional syntax ser:Prop/Hets       
@@ -9050,9 +9049,9 @@ interpretation repair3 : Repair to MyRepair = %cons
          lang:  <http://www.omg.org/spec/DOL/languages/>
                 %% definitions of conforming languages
          log:   <http://www.omg.org/spec/DOL/logics/>    
-		 		%% descriptions of logics ...
+                %% descriptions of logics ...
          trans: <http://www.omg.org/spec/DOL/translations/> )%  
-		 		%% ... and translations
+                %% ... and translations
 
 library Mereology
 
@@ -9068,7 +9067,7 @@ ontology BasicParthood =
                 %% omitted similar declarations of the other classes
     DisjointUnionOf: SpaceRegion, TimeInterval, AbstractRegion, Perdurant
                 %% pairwise disjointness more compact 
-				%% thanks to an OWL built-in
+                %% thanks to an OWL built-in
   ObjectProperty: isPartOf        
   	Characteristics: Transitive
   ObjectProperty: isProperPartOf  
@@ -9206,12 +9205,14 @@ end
 \ssclause{Alignments}
 \index{alignment}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
-%prefix( :     <http://www.example.org/alignment#>
+%prefix( :      <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
          lang:  <http://www.omg.org/spec/DOL/languages/>
                 %% definitions of conforming languages
-         log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
-         trans: <http://www.omg.org/spec/DOL/translations/> )% %% ... and translations
+         log:   <http://www.omg.org/spec/DOL/logics/>
+                %% descriptions of logics ...
+         trans: <http://www.omg.org/spec/DOL/translations/> )%
+                %% ... and translations
 
 library Alignments
 
@@ -9264,12 +9265,14 @@ end
 \sclause{Distributed Description Logics}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
-%prefix( :     <http://www.example.org/mereology#>
+%prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
          lang:  <http://www.omg.org/spec/DOL/languages/>
                 %% definitions of conforming languages
-         log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
-         trans: <http://www.omg.org/spec/DOL/translations/> )% %% ... and translations
+         log:   <http://www.omg.org/spec/DOL/logics/>
+                %% descriptions of logics ...
+         trans: <http://www.omg.org/spec/DOL/translations/> )%
+                %% ... and translations
 
 library Publications
 
@@ -9342,10 +9345,12 @@ end
 
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,equivalence},escapechar=@,mathescape]
-%prefix( :     <http://www.example.org/alignment#>
+%prefix( :      <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
-         log:   <http://www.omg.org/spec/DOL/logics/> %% descriptions of logics ...
-         trans: <http://www.omg.org/spec/DOL/translations/> )% %% ... and translations
+         log:   <http://www.omg.org/spec/DOL/logics/>
+                %% descriptions of logics ...
+         trans: <http://www.omg.org/spec/DOL/translations/> )%
+                %% ... and translations
 
 library Algebra
 
