Add missing '%prefix(' terminator

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3371,7 +3371,7 @@ Fig.~\ref{fig:state-machine} & stm & state machine\\\hline
 %prefix( :      <http://www.example.org/uml/>
          uml:   <http://www.uml.org/spec/UML/>
 %% descriptions of logics ...		 
-         log:   <http://www.omg.org/spec/DOL/logics/>
+         log:   <http://www.omg.org/spec/DOL/logics/> )%
 library ATM
 
 view cd2stm = cd to { atm hide along stm2cd} end
