--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3370,7 +3370,7 @@ Fig.~\ref{fig:state-machine} & stm & state machine\\\hline
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement,library,via,network,entailment,entails,refined,consistent},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/uml/>
          uml:   <http://www.uml.org/spec/UML/>
-         log:   <http://www.omg.org/spec/DOL/logics/> )%
+         log:   <http://purl.net/DOL/logics/> )%
                 %% descriptions of logics ...
 library ATM
 
@@ -8918,7 +8918,7 @@ combine NetworkElements  & Alignments, Publications \\\hline
 \sclause{Simple Examples in Propositional Logic}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/prop#>
-         log:   <http://www.omg.org/spec/DOL/logics/> )%     
+         log:   <http://purl.net/DOL/logics/> )%
                 %% descriptions of logics ...
 
 %% non-standard serialization built into Hets: 
@@ -9046,11 +9046,11 @@ interpretation repair3 : Repair to MyRepair = %cons
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,import},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
-         lang:  <http://www.omg.org/spec/DOL/languages/>
+         lang:  <http://purl.net/DOL/languages/>
                 %% definitions of conforming languages
-         log:   <http://www.omg.org/spec/DOL/logics/>    
+         log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
-         trans: <http://www.omg.org/spec/DOL/translations/> )%  
+         trans: <http://purl.net/DOL/translations/> )%
                 %% ... and translations
 
 library Mereology
@@ -9207,11 +9207,11 @@ end
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
-         lang:  <http://www.omg.org/spec/DOL/languages/>
+         lang:  <http://purl.net/DOL/languages/>
                 %% definitions of conforming languages
-         log:   <http://www.omg.org/spec/DOL/logics/>
+         log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
-         trans: <http://www.omg.org/spec/DOL/translations/> )%
+         trans: <http://purl.net/DOL/translations/> )%
                 %% ... and translations
 
 library Alignments
@@ -9267,11 +9267,11 @@ end
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
-         lang:  <http://www.omg.org/spec/DOL/languages/>
+         lang:  <http://purl.net/DOL/languages/>
                 %% definitions of conforming languages
-         log:   <http://www.omg.org/spec/DOL/logics/>
+         log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
-         trans: <http://www.omg.org/spec/DOL/translations/> )%
+         trans: <http://purl.net/DOL/translations/> )%
                 %% ... and translations
 
 library Publications
@@ -9347,9 +9347,9 @@ end
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,equivalence},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
-         log:   <http://www.omg.org/spec/DOL/logics/>
+         log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
-         trans: <http://www.omg.org/spec/DOL/translations/> )%
+         trans: <http://purl.net/DOL/translations/> )%
                 %% ... and translations
 
 library Algebra
