Fix #161: add declarations for used prefixes

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8918,8 +8918,10 @@ combine NetworkElements  & Alignments, Publications \\\hline
 \sclause{Simple Examples in Propositional Logic}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists},escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/prop#>
-         log:   <http://purl.net/DOL/logics/> )%
+         log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
+         ser:   <http://purl.net/DOL/serializations/> )%
+                %% ... and serializations
 
 %% non-standard serialization built into Hets: 
 logic log:Propositional syntax ser:Prop/Hets       
@@ -9047,7 +9049,9 @@ interpretation repair3 : Repair to MyRepair = %cons
 %prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
          lang:  <http://purl.net/DOL/languages/>
-                %% definitions of conforming languages
+                %% definitions of conforming languages ...
+         ser:   <http://purl.net/DOL/serializations/>
+                %% ... and their serializations
          log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
          trans: <http://purl.net/DOL/translations/> )%
@@ -9208,7 +9212,9 @@ end
 %prefix( :      <http://www.example.org/alignment#>
          owl:   <http://www.w3.org/2002/07/owl#>
          lang:  <http://purl.net/DOL/languages/>
-                %% definitions of conforming languages
+                %% definitions of conforming languages ...
+         ser:   <http://purl.net/DOL/serializations/>
+                %% ... and their serializations
          log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
          trans: <http://purl.net/DOL/translations/> )%
@@ -9268,7 +9274,9 @@ end
 %prefix( :      <http://www.example.org/mereology#>
          owl:   <http://www.w3.org/2002/07/owl#>
          lang:  <http://purl.net/DOL/languages/>
-                %% definitions of conforming languages
+                %% definitions of conforming languages ...
+         ser:   <http://purl.net/DOL/serializations/>
+                %% ... and their serializations
          log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
          trans: <http://purl.net/DOL/translations/> )%
@@ -9349,6 +9357,8 @@ end
          owl:   <http://www.w3.org/2002/07/owl#>
          log:   <http://purl.net/DOL/logics/>
                 %% descriptions of logics ...
+         ser:   <http://purl.net/DOL/serializations/>
+                %% ... serializations ...
          trans: <http://purl.net/DOL/translations/> )%
                 %% ... and translations
 
